Replace Attach API with /proc/net/tcp for JDWP port discovery
Eliminates the -Djdk.attach.allowAttachSelf=true flag and jdk.attach
module requirement. The library now discovers the JDWP port by reading
listening TCP ports from /proc/net/tcp and verifying each via JDI nonce
check with a hard timeout (JDI's built-in timeout doesn't reliably abort
on non-JDWP ports that accept TCP but never send the handshake).

The simplified command line is now just:
  java -javaagent:durable-threads.jar \
       -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
       --add-modules jdk.jdi ...

https://claude.ai/code/session_01JVaEev424m8qmDwGq8FATE