@@ -58,8 +58,7 @@ Both JVMs must be started with the agent and JDWP enabled:
 
 % java -javaagent:durable-threads-1.0.0.jar \
        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
-       -Djdk.attach.allowAttachSelf=true \
-       --add-modules jdk.jdi,jdk.attach \
+       --add-modules jdk.jdi \
        -cp .:durable-threads-1.0.0.jar \
        FreezeDemo
 i=0
@@ -72,8 +71,7 @@ About to freeze!
 
 % java -javaagent:durable-threads-1.0.0.jar \
        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
-       -Djdk.attach.allowAttachSelf=true \
-       --add-modules jdk.jdi,jdk.attach \
+       --add-modules jdk.jdi \
        -cp .:durable-threads-1.0.0.jar \
        RestoreDemo
 Resumed!
@@ -85,7 +83,7 @@ i=10
 Done!
 ```
 
-The library automatically discovers the JDWP port — no need to specify an explicit `address=PORT`. If you prefer a fixed port, you can use `address=44892` (or any port) and drop the `-Djdk.attach.allowAttachSelf` and `jdk.attach` module.
+The library automatically discovers the JDWP port — no need to specify an explicit `address=PORT`. If you prefer a fixed port, you can add `address=44892` (or any port) to the `-agentlib:jdwp` argument.
 
 The loop variable `i` was 5 when the thread froze. The restored thread resumes from the line after `freeze()` with `i == 5` and continues the loop to completion.
 
@@ -258,8 +256,8 @@ src/main/java/ai/jacc/durableThreads/
 ## Requirements
 
 - **Java 21+** — uses modern language features and JDI APIs
-- **JDWP** — the JVM must be started with `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n`. The library auto-discovers the JDWP port via the Attach API (requires `-Djdk.attach.allowAttachSelf=true` and `--add-modules jdk.jdi,jdk.attach`). Alternatively, specify a fixed port with `address=PORT` and use just `--add-modules jdk.jdi`
-- **jdk.jdi module** — always required. Add `jdk.attach` as well if using auto-discovery (recommended)
+- **JDWP** — the JVM must be started with `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n`. The library auto-discovers the JDWP port (on Linux, via `/proc/net/tcp`). You can also specify a fixed port with `address=PORT`
+- **jdk.jdi module** — add `--add-modules jdk.jdi` to the command line
 
 ## License
 
